working on home page design.

--- a/NetCoreCMS.Framework/Resources/NetCoreCMS.Framework.i18n.SharedResource.bn.lang
+++ b/NetCoreCMS.Framework/Resources/NetCoreCMS.Framework.i18n.SharedResource.bn.lang
@@ -7,6 +7,7 @@
     "admin": "এডমিন",
     "admin panel": "পরিচালনা পরিষদ",
     "alternative": "বিকল্প",
+    "all post": "সকল পোস্ট",
     "and": "এবং",
     "auto": "স্বয়ংক্রিয়",
     "by": "এর",
@@ -42,6 +43,8 @@
     "log out": "প্রস্থান করুন",
     "manage": "নিয়ন্ত্রণ করুন",
     "menu": "মেনু",
+    "next": "পরবর্তী",
+    "previous": "পূর্ববর্তী",
     "no title": "শিরোনামহীন",
     "not available": "নেই",
     "password": "পাসওয়ার্ড",
@@ -57,6 +60,7 @@
     "search": "অনুসন্ধান",
     "since": "থেকে",
     "space": "জায়গা",
+    "sticky": "আঠা লাগানো",
     "submit": "পাঠান",
     "tag": "ট্যাগ",
     "the {0} field is not a valid e-mail address.": "এই {0} ফিল্ড এ সঠিক ইমেইল এড্রেস নেই।",
