changed language system into single file.

--- a/NetCoreCMS.Framework/Resources/SharedResource.lang
+++ b/NetCoreCMS.Framework/Resources/SharedResource.lang
@@ -1,15 +1,21 @@
 {
   "Translations": {
     "100": "১০০",
-    "6": "৬",
     "2017": "২০১৭",
+    "6": "৬",
     "add new": "নতুন যোগ করুন",
     "admin": "এডমিন",
     "admin panel": "পরিচালনা পরিষদ",
-    "alternative": "বিকল্প",
+    "all blog posts": "সকল ব্লগ পোস্ট সমূহ",
+    "all categories": "সকল বিভাগ সমূহ",
     "all post": "সকল পোস্ট",
+    "all tags": "সকল ট্যাগ সমূহ",
+    "alternative": "বিকল্প",
     "and": "এবং",
+    "anonymous": "অপরিচিত",
+    "author": "লেখক",
     "auto": "স্বয়ংক্রিয়",
+    "blog post": "ব্লগ পোস্ট",
     "by": "এর",
     "category": "বিভাগ",
     "close": "বন্ধ",
@@ -34,7 +40,7 @@
     "enter your email.": "আপনার ইমেইল টি লিখুন।",
     "failed": "ব্যর্থ",
     "feed": "ফিড",
-    "filename": "NetCoreCMS.Framework.i18n.SharedResource.bn.lang",
+    "filename": "NetCoreCMS.Framework.SharedResource.bn.lang",
     "forgot your password?": "পাসওয়ার্ড ভুলে গেছেন?",
     "hello": "হ্যালো",
     "instead": "পরিবর্তে",
@@ -43,12 +49,14 @@
     "log out": "প্রস্থান করুন",
     "manage": "নিয়ন্ত্রণ করুন",
     "menu": "মেনু",
+    "more": "আরো",
     "next": "পরবর্তী",
-    "previous": "পূর্ববর্তী",
     "no title": "শিরোনামহীন",
     "not available": "নেই",
     "password": "পাসওয়ার্ড",
     "phone number": "ফোন নং",
+    "previous": "পূর্ববর্তী",
+    "published date": "সঙ্কলনের দিন",
     "register": "নিবন্ধন করুন",
     "register as a new user?": "নতুন ব্যাবহারকারি অ্যাকাউন্ট খুলবেন?",
     "registration form": "নিবন্ধন ফরম",
@@ -63,6 +71,7 @@
     "sticky": "আঠা লাগানো",
     "submit": "পাঠান",
     "tag": "ট্যাগ",
+    "tags": "ট্যাগ সমূহ",
     "the {0} field is not a valid e-mail address.": "এই {0} ফিল্ড এ সঠিক ইমেইল এড্রেস নেই।",
     "the {0} field is not a valid phone number.": "এই {0} ফিল্ড এ সঠিক ফোন নং নেই।",
     "the {0} field is required.": "{0} ফিল্ড আবশ্যক।",
